--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/restaurant?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=15031997Katarina
+spring.jpa.propertie.hibernate.max_fetch_depth=1
